# scripts_dump

./: .gitignore  README.md
scripts/P4/: config.example.json  export.py  pyproject.toml
scripts/workdates/: pyproject.toml  workdays.py
scripts/workdates/utils/: holidays_provider.py
shared/: pyproject.toml
shared/src/shared_utils/: __init__.py  chart_transplant.py  date_utils.py  json_read.py
